fix: datacontainer-alignment

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     --color-primary: 135 94 255;
     --color-secondary: 19 17 53;
     --color-gray: 150 149 185;
-    --color-lightBlue: 153 196 239;
+    --color-yellow: 245 219 10;
     --color-lightGray: 62 60 91;
     --color-lightPurple: 56 46 113;
     --color-violet: 42 32 93;
